--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ghost",
+    "name": "ruedumaroc",
     "version": "0.3.3",
     "private": true,
     "scripts": {
@@ -11,6 +11,7 @@
     },
     "engineStrict": true,
     "dependencies": {
+        "pg": "latest",
         "express": "3.3.4",
         "express-hbs": "0.2.2",
         "connect-slashes": "0.0.9",
